	* IMPROVE: when running full sync, change sync source from mongod to
	mongos. #360
	* IMPROVE: when source type is sharding, change checkpoint position from
	config-server to mongos.
	* BUGFIX: fix bug of whether the starting time oplog is legal: the oldest
	oplog timestamp > checkpoint.start_position
	* IMPROVE: convert kafka producer MaxMessageBytes configuration from 1MB
	to 16MB. #369.

2020-06-08 Alibaba Cloud.
	* version: 2.4.5
	* BUGFIX: fix bug of ignore error wrong when parsed error list is nil.

2020-06-05 Alibaba Cloud.
	* version: 2.4.4
	* BUGFIX: fix bug of "two $set" in update query. see #345.
	* BUGFIX: fix bug of source mongodb judgement error. see #343.
	* IMPROVE: solve the idempotency problem of oplog synchronization
	during the initial sync period. see #345.

2020-05-14 Alibaba Cloud.
	* version: 2.4.3
	* BUGFIX: rename `full_sync.collection_exist_no_drop` to
	`full_sync.collection_exist_drop`.

2020-04-22 Alibaba Cloud.
	* version: 2.4.2
	* BUGFIX: fix bug of applyOps run failed. #329

2020-04-09 Alibaba Cloud.
	* version: 2.4.1
	* IMPROVE: add speed limit policy in full sync stage.
	* IMPROVE: modify speed limit policy to token bucket algorithm in
	incremental sync.
	* IMPROVE: add background index build policy, see full_sync.create_index. #316
	* IMPROVE: add monitor in full sync stage.
	* BUGFIX: fix bug of parsing oplog empty from kafka. #317
	* BUGFIX: fix bug of checkpoint flush block. #323

2020-03-25 Alibaba Cloud.
	* version: 2.4.0
	* IMPROVE: support change stream to solve move chunk problem.
	* IMRPOVE: add feature compatiable version(fcv) for configuration and
	checkpoint.
	* IMPROVE: optimize orphan document filter.
	* IMPROVE: block password in conf and log.
	* IMPROVE: retry to insert document when duplicate error happen in full
	sync stage.
	* IMRPOVE: add 'full_sync.create_index' in configuration.
	* DISABLE: temporarily disable oplog stored to disk during document
	replication released on v2.2.1.

2020-01-22 Alibaba Cloud.