@@ -5,7 +5,7 @@
 
 # current configuration version, do not modify.
 # 当前配置文件的版本号，请不要修改该值。
-conf.version = 3
+conf.version = 4
 
 # --------------------------- global configuration ---------------------------
 # collector name
@@ -229,6 +229,11 @@ incr_sync.worker = 8
 # Do not enable this option when tunnel type is "direct"
 # 是否启用发送，非direct模式发送可以选择压缩以减少网络带宽消耗。
 incr_sync.worker.oplog_compressor = none
+
+# set the sync delay just like mongodb secondary slaveDelay parameter. unit second.
+# 设置目的端的延迟，比如延迟源端20分钟，类似MongoDB本身主从同步slaveDelay参数，单位：秒
+# 0表示不启用
+incr_sync.target_delay = 0
 
 # memory queue configuration, plz visit FAQ document to see more details.
 # do not modify these variables if the performance and resource usage can
