@@ -11,6 +11,7 @@ import (
 
 	"github.com/stretchr/testify/assert"
 	"github.com/vinllen/mgo/bson"
+	"time"
 )
 
 func mockSyncer() *OplogSyncer {
@@ -34,7 +35,7 @@ func mockSyncer() *OplogSyncer {
  * noopGiven array marks the noop.
  * sameTsGiven array marks the index that ts is the same with before.
  */
-func mockOplogs(length int, ddlGiven []int, noopGiven []int, sameTsGiven []int, startTs int) []*oplog.GenericOplog {
+func mockOplogs(length int, ddlGiven []int, noopGiven []int, sameTsGiven []int, startTs int64) []*oplog.GenericOplog {
 	output := make([]*oplog.GenericOplog, length)
 	ddlIndex := 0
 	noopIndex := 0
@@ -53,7 +54,7 @@ func mockOplogs(length int, ddlGiven []int, noopGiven []int, sameTsGiven []int, 
 				ParsedLog: oplog.ParsedLog{
 					Namespace: "a.b",
 					Operation: op,
-					Timestamp: bson.MongoTimestamp(startTs + i),
+					Timestamp: bson.MongoTimestamp(startTs + int64(i)),
 				},
 			},
 		}
@@ -1229,3 +1230,182 @@ func TestFilterPartialLog(t *testing.T) {
 	}
 }
 */
+
+
+func TestDispatchBatches(t *testing.T) {
+	// test dispatchBatches
+
+	var nr int
+
+	// 1. input array is empty
+	{
+		fmt.Printf("TestDispatchBatches case %d.\n", nr)
+		nr++
+
+		batcher := &Batcher{
+			workerGroup: []*Worker{
+				{
+					queue: make(chan []*oplog.GenericOplog, 100),
+				},
+			},
+		}
+		utils.IncrSentinelOptions.TargetDelay = -1
+		conf.Options.IncrSyncTargetDelay = 0
+		ret := batcher.dispatchBatches(nil)
+		assert.Equal(t, false, ret, "should be equal")
+	}
+
+	// 2. normal case: input array is not empty
+	{
+		fmt.Printf("TestDispatchBatches case %d.\n", nr)
+		nr++
+
+		batcher := &Batcher{
+			workerGroup: []*Worker{
+				{
+					queue: make(chan []*oplog.GenericOplog, 100),
+				},
+			},
+		}
+		utils.IncrSentinelOptions.TargetDelay = -1
+		conf.Options.IncrSyncTargetDelay = 0
+
+		mockInput := [][]*oplog.GenericOplog{
+			mockOplogs(20, nil, nil, nil, 100),
+		}
+		// set lastOplog
+		batcher.lastOplog = mockInput[0][len(mockInput[0]) - 1]
+
+		ret := batcher.dispatchBatches(mockInput)
+		assert.Equal(t, true, ret, "should be equal")
+		assert.Equal(t, 1, len(batcher.workerGroup[0].queue), "should be equal")
+		assert.Equal(t, 0, batcher.utDispatchBatchesDelay, "should be equal")
+	}
+
+	// 3. delay == 1s
+	{
+		fmt.Printf("TestDispatchBatches case %d.\n", nr)
+		nr++
+
+		batcher := &Batcher{
+			workerGroup: []*Worker{
+				{
+					queue: make(chan []*oplog.GenericOplog, 100),
+				},
+			},
+		}
+		utils.IncrSentinelOptions.TargetDelay = -1
+		conf.Options.IncrSyncTargetDelay = 1
+
+		mockInput := [][]*oplog.GenericOplog{
+			mockOplogs(20, nil, nil, nil, time.Now().Unix() << 32),
+		}
+		// set lastOplog
+		batcher.lastOplog = mockInput[0][len(mockInput[0]) - 1]
+
+		ret := batcher.dispatchBatches(mockInput)
+		assert.Equal(t, true, ret, "should be equal")
+		assert.Equal(t, 1, len(batcher.workerGroup[0].queue), "should be equal")
+		assert.Equal(t, 0, batcher.utDispatchBatchesDelay, "should be equal")
+	}
+
+	// 4. delay == 1s
+	{
+		fmt.Printf("TestDispatchBatches case %d.\n", nr)
+		nr++
+
+		batcher := &Batcher{
+			workerGroup: []*Worker{
+				{
+					queue: make(chan []*oplog.GenericOplog, 100),
+				},
+			},
+		}
+		utils.IncrSentinelOptions.TargetDelay = 1
+		conf.Options.IncrSyncTargetDelay = 100
+
+		mockInput := [][]*oplog.GenericOplog{
+			mockOplogs(20, nil, nil, nil, time.Now().Unix() << 32),
+		}
+		// set lastOplog
+		batcher.lastOplog = mockInput[0][len(mockInput[0]) - 1]
+
+		ret := batcher.dispatchBatches(mockInput)
+		assert.Equal(t, true, ret, "should be equal")
+		assert.Equal(t, 1, len(batcher.workerGroup[0].queue), "should be equal")
+		assert.Equal(t, 0, batcher.utDispatchBatchesDelay, "should be equal")
+	}
+
+	// 5. delay == 10 s
+	{
+		fmt.Printf("TestDispatchBatches case %d.\n", nr)
+		nr++
+
+		batcher := &Batcher{
+			workerGroup: []*Worker{
+				{
+					queue: make(chan []*oplog.GenericOplog, 100),
+				},
+			},
+		}
+		utils.IncrSentinelOptions.TargetDelay = 10
+		conf.Options.IncrSyncTargetDelay = 100
+
+		mockInput := [][]*oplog.GenericOplog{
+			mockOplogs(20, nil, nil, nil, time.Now().Unix() << 32),
+		}
+		// set lastOplog
+		batcher.lastOplog = mockInput[0][len(mockInput[0]) - 1]
+
+		ret := batcher.dispatchBatches(mockInput)
+		fmt.Println(batcher.utDispatchBatchesDelay)
+		assert.Equal(t, true, ret, "should be equal")
+		assert.Equal(t, 1, len(batcher.workerGroup[0].queue), "should be equal")
+		assert.Equal(t, true, batcher.utDispatchBatchesDelay >= 1, "should be equal")
+	}
+
+	// 5. delay == 60 s
+	{
+		fmt.Printf("TestDispatchBatches case %d.\n", nr)
+		nr++
+
+		batcher := &Batcher{
+			workerGroup: []*Worker{
+				{
+					queue: make(chan []*oplog.GenericOplog, 100),
+				},
+			},
+		}
+		utils.IncrSentinelOptions.TargetDelay = 60
+		conf.Options.IncrSyncTargetDelay = 100
+
+		utils.InitialLogger("", "", "info", true, true)
+
+		now := time.Now().Unix() << 32
+		mockInput := [][]*oplog.GenericOplog{
+			mockOplogs(20, nil, nil, nil, time.Now().Unix() << 32),
+		}
+		// set lastOplog
+		batcher.lastOplog = mockInput[0][len(mockInput[0]) - 1]
+
+		ret := batcher.dispatchBatches(mockInput)
+		fmt.Println(batcher.utDispatchBatchesDelay)
+		assert.Equal(t, true, ret, "should be equal")
+		assert.Equal(t, 1, len(batcher.workerGroup[0].queue), "should be equal")
+		assert.Equal(t, true, batcher.utDispatchBatchesDelay >= 11, "should be equal")
+
+		// this batch should be no delay
+		mockInput = [][]*oplog.GenericOplog{
+			mockOplogs(20, nil, nil, nil, now),
+		}
+		// set lastOplog
+		batcher.lastOplog = mockInput[0][len(mockInput[0]) - 1]
+		batcher.utDispatchBatchesDelay = 0
+
+		ret = batcher.dispatchBatches(mockInput)
+		fmt.Println(batcher.utDispatchBatchesDelay)
+		assert.Equal(t, true, ret, "should be equal")
+		assert.Equal(t, 2, len(batcher.workerGroup[0].queue), "should be equal")
+		assert.Equal(t, true, batcher.utDispatchBatchesDelay == 0, "should be equal")
+	}
+}
